# oo-parking-lot

./: README.md
backend/: pyproject.toml
backend/backend/: __init__.py  config.py
backend/backend/controllers/: parking.py  users.py
backend/backend/models/: __init__.py  parking.py  parkingerrs.py  users.py
backend/backend/models/tests/: test_parking.py
backend/backend/resources/: users.py
backend/tests/: test_backend.py
frontend/: .eslintrc.json  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: index.tsx
frontend/src/http-common/: index.ts
frontend/src/pages/App/: App.test.tsx  index.tsx
frontend/src/services/: tutorial.service.ts
