[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["chacychavez <cyrus@insynchq.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = "file_managers"

[tool.isort]
src_paths = ["isort", "test"]
